# vbwd-plugin-cms

./: .flake8  .gitignore  README.md  __init__.py  admin-config.json  config.json  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/developer/: geo-blocking.md  import-export.md  page-slug-resolution.md
docs/imports/: _build_theme_styles.py  theme-styles.json
docs/seo/: nginx-prerender.md
migrations/versions/: 20260412_1000_cms_page_widget.py  20260420_1000_style_default.py  20260422_1200_cms_page_slug_full_path.py  20260603_1000_cms_unified_post.py  20260603_1100_cms_post_search_vector.py  20260603_1200_cms_post_layout.py  20260604_1000_drop_theme_switcher.py  20260604_1100_cms_post_featured_image.py  20260604_1200_cms_post_source_css.py  20260605_1000_cms_post_preview_token.py  20260606_1000_cms_post_areas_widgets.py  20260606_1100_cms_layout_default.py  20260612_1000_cms_widget_global.py  20260612_1100_drop_widget_global.py  20260613_1300_fold_tags_into_core.py  20260617_1000_cms_post_widget_config_override.py  20260618_1000_unfold_tags_from_core.py  20260625_1000_drop_legacy_cms_page_subsystem.py  20260705_1000_cms_layout_head_html.py  20260706_1000_cms_geo_block_config.py  20260707_1000_cms_post_permalink.py  20260708_1000_cms_post_pinned.py  20260711_1000_cms_entity_page.py
src/: cli.py  demo_seed.py  languages.py  routes.py  seo_routes.py
src/middleware/: geo_block_middleware.py  routing_middleware.py
src/models/: __init__.py  cms_category.py  cms_entity_page.py  cms_geo_block_config.py  cms_image.py  cms_layout.py  cms_layout_widget.py  cms_menu_item.py  cms_page.py  cms_page_content_block.py  cms_page_widget.py  cms_post.py  cms_post_content_block.py  cms_post_term.py  cms_post_widget.py  cms_routing_rule.py  cms_style.py  cms_term.py  cms_widget.py
src/services/: _slug.py  (+41 more)
tests/: conftest.py
(+282 files in other folders)
