[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vbwd-plugin-cms"
version = "26.7.0"
description = "VBWD backend plugin: cms"
requires-python = ">=3.11"
license = { text = "BSL-1.1" }
dependencies = []

# Runtime lives inside the vbwd-backend host, which provides `vbwd.*` (core) and
# any sibling plugins declared in PluginMetadata.dependencies. Those are NOT pinned
# here so the wheel stays host-agnostic; install the host separately.

[tool.setuptools]
# The repo root IS the plugins/cms/ directory; remap it so the wheel exposes
# the `plugins.cms` package that runtime imports (e.g. `from plugins.cms...`).
package-dir = { "plugins.cms" = "." }
packages = [
    "plugins.cms",
    "plugins.cms.src",
    "plugins.cms.src.middleware",
    "plugins.cms.src.models",
    "plugins.cms.src.repositories",
    "plugins.cms.src.services",
    "plugins.cms.src.services.data_exchange",
    "plugins.cms.src.services.routing",
]

[tool.setuptools.package-data]
# Ship everything a pip-installed plugin needs to be self-complete: config JSON,
# Alembic migrations (the shared backend env.py resolves version_locations from
# the installed package path), seed scripts, and bin/ helpers.
"plugins.cms" = [
    "*.json",
    "migrations/*.py",
    "migrations/*.mako",
    "migrations/*.ini",
    "migrations/**/*.py",
    "migrations/**/*.mako",
    "populate_db.py",
    "populate_*.py",
    "demo_seed.py",
    "bin/*",
    "bin/**/*",
]

# --- preserved (not generated by vbwd packaging) ---
[tool.black]
# docs/imports/_build_theme_styles.py is a CSS-string code generator —
# the long lines are inline CSS literals, not Python source to reformat.
extend-exclude = '''
(
    /docs/
)
'''
